welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
  ecritMessage()
  ^ColumnByColumn:18: error: not found: value compteur
  compteur = compteur + 1
  ^