welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def isInFinalPosition():Boolean = {
  
  if ((getX() == getMondeLargeur() -1) && getY() == getMondeHauteur()-1) {return true}
  
  else {return false}
  
}

def allerProchainePosition() {
  if (getY() == getMondeHauteur() -1) {
    setPos(getX() +1, 0)
  }
  else {setPos(getX(), getY() +1)}
}

def ecritNum() {
  
  ecritMessage()
  compteur = compteur + 1
  
}


override def run() {
  
  while (isInFinalPosition == false) {
    var compteur:Int = 0
    ecritNum()
    allerProchainePosition()   
  }
}